_rendered/apps/local-path-provisioner/apps-deployment-local-path-provisioner-local-path-provisioner.yaml
# Source: local-path-provisioner/charts/local-path-provisioner/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: local-path-provisioner
  namespace: local-path-provisioner
  labels:
    app.kubernetes.io/name: local-path-provisioner
    helm.sh/chart: local-path-provisioner-0.0.36
    app.kubernetes.io/instance: local-path-provisioner
    app.kubernetes.io/version: "v0.0.36"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: local-path-provisioner
      app.kubernetes.io/instance: local-path-provisioner
  template:
    metadata:
      labels:
        app.kubernetes.io/name: local-path-provisioner
        helm.sh/chart: local-path-provisioner-0.0.36
        app.kubernetes.io/instance: local-path-provisioner
        app.kubernetes.io/version: "v0.0.36"
        app.kubernetes.io/managed-by: Helm
    spec:
      serviceAccountName: local-path-provisioner
      hostUsers: true
      securityContext:
        {}
      containers:
        - name: local-path-provisioner
          securityContext:
            {}
          image: "docker.io/rancher/local-path-provisioner:v0.0.36"
          imagePullPolicy: IfNotPresent
          command:
            - local-path-provisioner
            - start
            - --config
            - /etc/config/config.json
            - --service-account-name
            - local-path-provisioner
            - --provisioner-name
            - cluster.local/local-path-provisioner
            - --helper-image
            - "docker.io/library/busybox:latest"
            - --configmap-name
            - local-path-config
          volumeMounts:
            - name: config-volume
              mountPath: /etc/config/
          resources:
            {}
      volumes:
        - name: config-volume
          configMap:
            name: local-path-config
